# Aurum

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  main.cpp  patch_identify.diff  run_test.sh
benchmark/: main.cc  node_accepting_tcp_connections.cc  node_processing_payload.cc  node_processing_ping_requests.cc  server_fixture.hpp
docs/: callgrind.out  performance_report.md
include/aurum/: configuration.hpp  handlers.hpp  node.hpp  protocol.hpp  session.hpp  session_container.hpp  session_kernel.hpp  state.hpp  tcp_client.hpp  tcp_kernel.hpp  tcp_listener.hpp  tcp_session.hpp  websocket_client.hpp  websocket_listener.hpp  websocket_session.hpp
include/aurum/handlers/: discovery.hpp  identify.hpp  identify.hpp.orig  join.hpp  leave.hpp  non_implemented.hpp  ping.hpp  whoami.hpp
include/aurum/protocol/: exit_code.hpp  frame_builder.hpp  message_type.hpp  op_code.hpp  session_type.hpp
src/aurum/: node.cpp  session_kernel.cpp  state.cpp  tcp_client.cpp  tcp_kernel.cpp  tcp_listener.cpp  tcp_session.cpp  websocket_client.cpp  websocket_listener.cpp  websocket_session.cpp
src/aurum/protocol/: frame_builder.cpp
tests/: base.cc  connections_per_node.cc  connections_per_node_test.cc  node_fixture.hpp  node_test.cc  tcp_server_fixture.hpp  test_frame_builder.cc  test_node.cc  test_server.cc  utils.hpp
tests/fixtures/: node_fixture.hpp  tcp_server_fixture.hpp
